# Dcentralab_Assignment

./: .env_example  LICENSE  Makefile  README.md  app.py  full_scrape.txt  pyproject.toml  rag.py  scrapper.py
data_dir/: description.txt
templates/: api_key.html  llamaindex.html  llamaindex_result.html  nav.html
