[tool.poetry]
name = "Dcentralab Assignment"
version = "0.1.0"
description = "Dcentralab Assignment"
authors = ["Emerald Henry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
Crawl4AI = "^0.4.0"
python-dotenv = "^1.0.1"
openai = "^1.59.4"
llama-index = "^0.12.10"
flask = "^3.1.0"
ipython = "^8.31.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"